Doc/force-app/main/default/objects/Order/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Additional Billing Contact</relationshipLabel>
    <relationshipName>Additional_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>