Doc/force-app/main/default/objects/Order/fields/AVA_SFCPQ__Import_Fees__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Import_Fees__c</fullName>
    <inlineHelpText>The calculated customs duty and import fee for this transaction.</inlineHelpText>
    <label>Import Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>