Doc/force-app/main/default/objects/Order/fields/AVA_SFCPQ__Tax_Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Tax_Calculation_Status__c</fullName>
    <description>Displays the status of the tax.</description>
    <formula>IMAGE( 

CASE(      AVA_SFCPQ__AvaTaxMessage__c      , 

&quot;Tax Amount Is Up To Date&quot;, &quot;/img/msg_icons/confirm24.png&quot;, 

&quot;Automated Tax Calculation Triggered, Please Refresh Your Browser&quot;, &quot;/img/loading24.gif&quot;, 

&quot;Tax Amount is Outdated&quot;, &quot;/img/msg_icons/warning24.png&quot;, 
&quot;&quot;,&quot;&quot;,

&quot;/img/msg_icons/error24.png&quot;), 

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the status of the tax.</inlineHelpText>
    <label>Tax Calculation Status</label>
    <type>Text</type>
</CustomField>