Doc/force-app/main/default/objects/Order/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Captures Bill To address</description>
    <label>Bill To Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Billing_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Orders (Bill To Address)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>