Doc/force-app/main/default/objects/Order/fields/Billed_Amount_Without_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount_Without_Tax_USD__c</fullName>
    <description>The billed amount of the Order excluding tax, in terms of USD</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Amount Without Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>