Doc/force-app/main/default/objects/Order/fields/Billing_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Billing_Addressee__c</fullName>
    <label>Billing Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>