Doc/force-app/main/default/objects/Order/fields/Billing_Attention__c.field-meta.xml
<CustomField>
    <fullName>Billing_Attention__c</fullName>
    <label>Billing Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>