Doc/force-app/main/default/objects/Order/fields/Billing_Sched_Exception_Order_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sched_Exception_Order_Line_Count__c</fullName>
    <label>Billing Schedule Exception Line Count</label>
    <summaryFilterItems>
        <field>OrderItem.Billing_Schedule_Key__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>