Doc/force-app/main/default/objects/Order/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <description>Related Contract&apos;s Number</description>
    <label>ContractNumber</label>
    <length>80</length>
    <type>Text</type>
</CustomField>