Doc/force-app/main/default/objects/Order/fields/Custom_Software_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Custom_Software_Payment_Term__c</fullName>
    <description>twin field from Quote to capture custom payment term value as per BIZ-47433</description>
    <label>Custom Software Payment Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>