Doc/force-app/main/default/objects/Order/fields/Date_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Opportunity_Closed__c</fullName>
    <description>BIZ-64514</description>
    <formula>Opportunity.Date_Opportunity_Closed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Opportunity Closed</label>
    <type>Date</type>
</CustomField>