Doc/force-app/main/default/objects/Order/fields/Deal_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Deal_Conversion__c</fullName>
    <description>Custom field built according to US# BIZ-47145</description>
    <formula>SBQQ__Quote__r.Deal_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Conversion</label>
    <type>Checkbox</type>
</CustomField>