Doc/force-app/main/default/objects/Order/fields/Don_t_Sync_Order_to_NS__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Sync_Order_to_NS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created it as part of BIZ-72999.</description>
    <label>Don’t Sync Order to NS</label>
    <type>Checkbox</type>
</CustomField>