Doc/force-app/main/default/objects/Order/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>BIZ-47806 - Added field for NetSuite integration. Value will be populated by NetSuite</description>
    <label>Exchange Rate</label>
    <precision>15</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>