Doc/force-app/main/default/objects/Order/fields/First_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Year_End_Date__c</fullName>
    <description>BIZ-59994</description>
    <label>First Year End Date</label>
    <type>Date</type>
</CustomField>