Doc/force-app/main/default/objects/Order/fields/Has_Partial_Month__c.field-meta.xml
<CustomField>
    <fullName>Has_Partial_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the quote line represents a partial term. Created w.r.t BIZ-72051</description>
    <inlineHelpText>Checked (TRUE) when the End Date is not equal to (Start Date + First Segment Months − 1 day) from the related Quote.</inlineHelpText>
    <label>Has Partial Month</label>
    <type>Checkbox</type>
</CustomField>