Doc/force-app/main/default/objects/Order/fields/Hide_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Hide_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-60381</description>
    <label>Hide Pricing</label>
    <type>Checkbox</type>
</CustomField>