Doc/force-app/main/default/objects/Order/fields/Include_Multi_Year_Term_for_OnPrem__c.field-meta.xml
<CustomField>
    <fullName>Include_Multi_Year_Term_for_OnPrem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-66291 - Revenue Forecast Fields</description>
    <label>Include Multi Year Term for OnPrem?</label>
    <type>Checkbox</type>
</CustomField>