Doc/force-app/main/default/objects/Order/fields/Include_Platform_Deployment_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Include_Platform_Deployment_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-66291 - Revenue Forecast Fields</description>
    <label>Include Platform/Deployment Conversion?</label>
    <type>Checkbox</type>
</CustomField>