Doc/force-app/main/default/objects/Order/fields/Included_In_Batch__c.field-meta.xml
<CustomField>
    <fullName>Included_In_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of BIZ-66216 to indicate if the order was included in the AutoRenewals batch</description>
    <label>Included In Batch</label>
    <type>Checkbox</type>
</CustomField>