Doc/force-app/main/default/objects/Order/fields/Includes_modification_to_contract_term__c.field-meta.xml
<CustomField>
    <fullName>Includes_modification_to_contract_term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Field built according to US#BIZ-47145</description>
    <label>Includes modification to contract term?</label>
    <type>Checkbox</type>
</CustomField>