Doc/force-app/main/default/objects/Order/fields/Is_RMA_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_RMA_Order__c</fullName>
    <label>Is RMA Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>