Doc/force-app/main/default/objects/Order/fields/Latest_Bill_Now_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Bill_Now_Date_Time__c</fullName>
    <description>Invoice creation timestamp, when Bill Now was checked on an Order</description>
    <label>Latest Bill Now Date/Time</label>
    <type>DateTime</type>
</CustomField>