Doc/force-app/main/default/objects/Order/fields/Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIZ-70022 - This field will have the original contract value</description>
    <label>Master Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Amendment Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>