Doc/force-app/main/default/objects/Order/fields/Multiyear_Deal__c.field-meta.xml
<CustomField>
    <fullName>Multiyear_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiyear</label>
    <type>Checkbox</type>
</CustomField>