Doc/force-app/main/default/objects/Order/fields/NetSuite_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Order_Id__c</fullName>
    <description>Custom field built according to US#BIZ-47145</description>
    <externalId>true</externalId>
    <label>NetSuite Order Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>