Doc/force-app/main/default/objects/Order/fields/NetSuite_Sales_order_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sales_order_Internal_Id__c</fullName>
    <description>CustomField built according to US# BIZ-47145</description>
    <externalId>true</externalId>
    <label>NetSuite Sales order Internal Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>