Doc/force-app/main/default/objects/Order/fields/NS_Error__c.field-meta.xml
<CustomField>
    <fullName>NS_Error__c</fullName>
    <label>NS Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>