Doc/force-app/main/default/objects/Order/fields/NS_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Order_Type__c</fullName>
    <description>Net Suite Order Type for Order, Twin field on Quote</description>
    <label>NS Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NS_Order_Type</valueSetName>
    </valueSet>
</CustomField>