Doc/force-app/main/default/objects/Order/fields/NS_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Number__c</fullName>
    <description>BIZ-60005</description>
    <formula>Proforma_Invoice__r.NS_Payment_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Payment Number</label>
    <type>Text</type>
</CustomField>