Doc/force-app/main/default/objects/Order/fields/Number_of_Days_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_In_Advance__c</fullName>
    <description>Determines the number of days in advance of the Subscription Term Start Date that invoices should be generated.</description>
    <label>Num Days In Advance of Sub Start Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Num_Days_In_Advance_of_Sub_Start</valueSetName>
    </valueSet>
</CustomField>