Doc/force-app/main/default/objects/Order/fields/OP4I_Auto_Number_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Auto_Number_Deal_ID__c</fullName>
    <description>BIZ-63414</description>
    <formula>SBQQ__Quote__r.OP4I_Auto_Number_Deal_ID__c</formula>
    <label>OP4I Deal Id</label>
    <type>Text</type>
</CustomField>