Doc/force-app/main/default/objects/Order/fields/OP4I_Deal_URL__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_URL__c</fullName>
    <description>Created for story BIZ-49617</description>
    <formula>SBQQ__Quote__r.OP4I_Deal_URL__c</formula>
    <label>OP4I Deal URL</label>
    <type>Text</type>
</CustomField>