Doc/force-app/main/default/objects/Order/fields/OP4IDealID__c.field-meta.xml
<CustomField>
    <fullName>OP4IDealID__c</fullName>
    <description>Mapping field and used by integration systems</description>
    <externalId>true</externalId>
    <label>OnePlace ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>