Doc/force-app/main/default/objects/Order/fields/Order_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_USD__c</fullName>
    <formula>IF( TEXT( CurrencyIsoCode )&lt;&gt; &apos;USD&apos;, TotalAmount * CURRENCYRATE( TEXT(CurrencyIsoCode ) ) , TotalAmount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>