Doc/force-app/main/default/objects/Order/fields/Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Date__c</fullName>
    <description>Mapping field and used by integration systems</description>
    <label>Ordered Date</label>
    <type>Date</type>
</CustomField>