Doc/force-app/main/default/objects/Order/fields/Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Renewal Letter record</description>
    <label>Proforma Invoice</label>
    <referenceTo>Proforma_Invoice__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>