Doc/force-app/main/default/objects/Order/fields/Renewal_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote_Type__c</fullName>
    <label>Renewal Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal-Changes</fullName>
            </value>
            <value>
                <fullName>Consolidated-Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>