Doc/force-app/main/default/objects/Order/fields/Services_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Services_Product_Type__c</fullName>
    <description>Created for story BIZ-49687,BIZ-51230
To check quote is associated with Services product.</description>
    <label>Services Product Type</label>
    <summaryFilterItems>
        <field>OrderItem.Services_Product_Type__c</field>
        <operation>equals</operation>
        <value>Fixed Fee, T&amp;M</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>